# automated-hft-system

./: .dockerignore  .gitignore  CODE_GEN_SETUP.md  GETTING_STARTED.md  Makefile  Modeling.md  README.md  project_structure.md
.github/workflows/: ci-cd.yml
ai-automation/: README.md  orchestrator.py
ai-automation/code-generation/: schema_driven_generator.py
ai-automation/code-generation/schemas/: hft-core.yaml
ai-automation/deployment-automation/: README.md  ai_deployer.py  realtime_monitor.py
ai-automation/knowledge-acquisition/: ai_learning_engine.py
ai-automation/strategy-modeling/: ai_strategy_engine.py
configs/: README.md
configs/environments/: production.yml
data/: README.md
deployment/: README.md
docs/: architecture.md
infrastructure/: README.md
infrastructure/terraform/: main.tf
monitoring/: docker-compose.yml
scripts/: build.sh
src/: README.md
src/cpp/: CMakeLists.txt
src/cpp/common/: ring_buffer.hpp  types.hpp
src/python/: pyproject.toml
src/python/hft/: __init__.py
strategies/: README.md
strategies/market_making/: avellaneda_stoikov.py
strategies/ml_strategies/: IMPLEMENTATION_SUMMARY.py  README.md  __init__.py  base_ml_strategy.py  config.yml  market_data_processor.py  ml_strategy_integration.py  ml_workflow_engine.py  prediction_engine.py
strategies/ml_strategies/examples/: market_direction_strategy.py
strategies/ml_strategies/feature_engineering/: __init__.py
strategies/ml_strategies/models/: advanced_models.py
strategies/ml_strategies/optimal_execution/: __init__.py
tests/: README.md
