[tool.poetry]
name = "hft-trading-system"
version = "1.0.0"
description = "High-Frequency Trading System - Python Components"
authors = ["HFT Team <team@hft-system.com>"]
readme = "README.md"
packages = [{include = "hft"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.0"
pandas = "^2.0.0"
scipy = "^1.10.0"
scikit-learn = "^1.3.0"
xgboost = "^1.7.0"
lightgbm = "^4.0.0"
catboost = "^1.2.0"
tensorflow = "^2.13.0"
torch = "^2.0.0"
asyncio = "^3.4.3"
aiohttp = "^3.8.0"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
redis = "^4.6.0"
kafka-python = "^2.0.2"
psycopg2-binary = "^2.9.0"
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"
prometheus-client = "^0.17.0"
structlog = "^23.1.0"
pydantic = "^2.0.0"
click = "^8.1.0"
rich = "^13.4.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.25.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
plotly = "^5.15.0"
dash = "^2.12.0"

[tool.poetry.group.ml.dependencies]
optuna = "^3.3.0"
ray = {extras = ["tune"], version = "^2.6.0"}
mlflow = "^2.5.0"
wandb = "^0.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=hft --cov-report=html --cov-report=term-missing"
